Inseri o método setUp e refatorei o código